@@ -1,50 +1,47 @@
 package org.example.next_step.services;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.example.next_step.dtos.requests.LocationRequest;
 import org.example.next_step.dtos.responses.LocationResponse;
 import org.example.next_step.mappers.LocationMapper;
 import org.example.next_step.models.Location;
 import org.example.next_step.repositories.LocationRepository;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.client.RestTemplate;
-import org.springframework.web.util.UriComponentsBuilder;
-import com.fasterxml.jackson.databind.JsonNode;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.ResponseEntity;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.Map;
-import java.util.Set;
-import java.util.HashMap;
-import java.util.List;
-import java.util.ArrayList;
-
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 
 @Service
 @RequiredArgsConstructor
 public class LocationService {
 
     private final LocationRepository repo;
-    private static final String COUNTRIES_JSON_PATH = "src/main/java/org/example/next_step/data/countries.min.json";
+    private static final String COUNTRIES_JSON_CLASSPATH = "data/countries.min.json";
     private static Map<String, List<String>> countryCityMap;
 
-    private void loadCountryCityData() {
-        if (countryCityMap == null) {
-            ObjectMapper mapper = new ObjectMapper();
+    private static void loadCountryCityData() {
+        if (countryCityMap != null) return;
+        synchronized (LocationService.class) {
+            if (countryCityMap != null) return;
             try {
-                String json = new String(Files.readAllBytes(Paths.get(COUNTRIES_JSON_PATH)));
-                countryCityMap = mapper.readValue(json, new TypeReference<Map<String, List<String>>>() {
+                byte[] bytes = new ClassPathResource(COUNTRIES_JSON_CLASSPATH).getInputStream().readAllBytes();
+                ObjectMapper mapper = new ObjectMapper();
+                Map<String, List<String>> raw = mapper.readValue(bytes, new TypeReference<>() {
                 });
+                Map<String, List<String>> tmp = new ConcurrentHashMap<>();
+                raw.forEach((country, cities) -> {
+                    List<String> uniqueCities = new ArrayList<>(new LinkedHashSet<>(cities));
+                    tmp.put(country, Collections.unmodifiableList(uniqueCities));
+                });
+                countryCityMap = Collections.unmodifiableMap(tmp);
             } catch (IOException e) {
-                countryCityMap = new HashMap<>();
-                throw new RuntimeException("Không thể đọc dữ liệu quốc gia/city từ file JSON", e);
+                throw new IllegalStateException("Unable to read country/city JSON", e);
             }
         }
     }
@@ -58,24 +55,22 @@ public class LocationService {
     @Transactional(readOnly = true)
     public List<String> findCitiesByCountry(String country) {
         loadCountryCityData();
-        if (country.equalsIgnoreCase("all")) {
-            List<String> allCities = new ArrayList<>();
-            for (List<String> cities : countryCityMap.values()) {
-                allCities.addAll(cities);
-            }
-            return allCities;
+        if ("all".equalsIgnoreCase(country)) {
+            Set<String> unique = new LinkedHashSet<>();
+            countryCityMap.values().forEach(unique::addAll);
+            return List.copyOf(unique);
         }
-        return countryCityMap.getOrDefault(country, new ArrayList<>());
+        return countryCityMap.getOrDefault(country, List.of());
     }
 
     public List<String> findAllCountries() {
         loadCountryCityData();
-        return new ArrayList<>(countryCityMap.keySet());
+        return List.copyOf(countryCityMap.keySet());
     }
 
     @Transactional(readOnly = true)
     public LocationResponse findById(Long id) {
-        Location loc = repo.findById(id).orElseThrow(() -> new RuntimeException("Location not found"));
+        Location loc = repo.findById(id).orElseThrow(() -> new NoSuchElementException("Location not found"));
         return LocationMapper.toDTO(loc);
     }
 
@@ -87,17 +82,14 @@ public class LocationService {
 
     @Transactional
     public LocationResponse update(Long id, LocationRequest request) {
-        Location existing = repo.findById(id).orElseThrow(() -> new RuntimeException("Location not found"));
+        Location existing = repo.findById(id).orElseThrow(() -> new NoSuchElementException("Location not found"));
         LocationMapper.updateEntity(existing, request);
         return LocationMapper.toDTO(repo.save(existing));
     }
 
     @Transactional
     public void delete(Long id) {
-        if (!repo.existsById(id)) {
-            throw new RuntimeException("Location not found");
-        }
+        if (!repo.existsById(id)) throw new NoSuchElementException("Location not found");
         repo.deleteById(id);
     }
-
 }
